--- a/FoodOrderApp/app/src/main/res/values/strings.xml
+++ b/FoodOrderApp/app/src/main/res/values/strings.xml
@@ -1,10 +1,14 @@
 <resources>
     <string name="app_name">UNITAR Cafe</string>
     <string name="slogan">Order your food and collect it once it\'s ready! It\'s that EASY!!</string>
+    <string name="vendor_slogan">vendor\'s Sign-in</string>
 
     <!--MainActivity Button-->
     <string name="signUp">Sign Up</string>
     <string name="signIn">Sign In</string>
+    <string name="vendorsignIn">Vendor Sign In</string>
+    <string name="vendorsignUp">Vendor Sign Up</string>
+
     <string name="title_activity_home">Home</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -18,4 +22,7 @@
     <string name="signUpSName">Hegaarooban Phoobalan</string>
     <string name="signUpSPhone">0123456789</string>
     <string name="signUpUser">user001</string>
+    <string name="vendor_sign_in">Are you a vendor? Sign-in here.</string>
+    <string name="customer_sign_in">Are you a customer? Sign-in here.</string>
+
 </resources>
