Updated cart: data saved in Firebase
Signed-off-by: Durairaj Anbarasan <34974605+djraj@users.noreply.github.com>

--- a/FoodOrderApp/app/src/main/res/values/strings.xml
+++ b/FoodOrderApp/app/src/main/res/values/strings.xml
@@ -24,5 +24,7 @@
     <string name="signUpUser">user001</string>
     <string name="vendor_sign_in">Are you a vendor? Sign-in here.</string>
     <string name="customer_sign_in">Are you a customer? Sign-in here.</string>
+    <string name="radioVendor">Vendor</string>
+    <string name="radioUser">User</string>
 
 </resources>
