Added Vendor Home
Signed-off-by: Durairaj Anbarasan <34974605+djraj@users.noreply.github.com>

--- a/FoodOrderApp/app/src/main/res/values/strings.xml
+++ b/FoodOrderApp/app/src/main/res/values/strings.xml
@@ -26,5 +26,8 @@
     <string name="customer_sign_in">Are you a customer? Sign-in here.</string>
     <string name="radioVendor">Vendor</string>
     <string name="radioUser">User</string>
+    <string name="tabHome">HOME</string>
+    <string name="tabOrders">Orders</string>
+    <string name="tabFoods">FOODS</string>
 
 </resources>
